More fixes on mobile layout

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ h1 {
   font-size: 18px;
   margin-bottom: 20px;
   padding: 10px;
+  text-align: center;
 }
 
 .bookingForm button {
@@ -95,12 +96,25 @@ textarea {
     margin: auto;
   }
 
+  .timeSlotButtons button {
+    height: 50px;
+    hyphens: auto;
+    vertical-align: top;
+    word-break: break-all;
+    width: 45%;
+  }
+
   .bookingTitle {
-    font-size: 24px;
+    font-size: 14px;
     padding-left: 5px;
     padding-right: 5px;
-    text-align: center;
   }
 
   .info { margin: 10px; }
+}
+
+@media only screen and (min-width: 769px) {
+  .slotTable {
+    width: 100%;
+  }
 }
